added address and phone number

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Adrian &amp; Vondy, P.L.C.</h1>
 <p>Attorneys At Law</p>
+<address>125 West Boscawen Street</address>
+<address>Winchester, VA 22601</address>
+<address>Phone: (540) 667-8735</address>
+<address>Fax: (540) 667-8128</address>
