trying to figure out heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Adrian &amp; Vondy P.L.C.</title>
   <%= stylesheet_link_tag "application" %>
-  <%#= javascript_include_tag "application" %>
+  <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "plugins" %>
   <%= javascript_include_tag "script" %>
   <%= csrf_meta_tags %>
