--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
   <title>Adrian &amp; Vondy P.L.C.</title>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag "plugins" %>
-  <%= javascript_include_tag "script" %>
+  <%#= javascript_include_tag "plugins" %>
+  <%#= javascript_include_tag "script" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
