--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -28,8 +28,8 @@
         <div class="gs_3 omega">
           <h3 class="widgettitle">Our Primary Areas of Practice</h3>
           <p><%= link_to "Bankruptcy", bankruptcy_path %></p>
-          <p><%= link_to "Estate Planning, Wills and Trusts", estate_planning_path%></p>
-          <p><%= link_to "Estate Administration and Probate", estate_administration_path %></p>
+          <p><%= link_to "Estate Planning, Wills and Trusts", estate_planning_path %></p>
+          <p><%= link_to "Estate Administration and Probate", estate_planning_path %></p>
           <p><%= link_to "Real Estate Settlements", real_estate_path %></p>
           <p><%= link_to "Social Security Disability", social_security_path %></p>
           <p><%= link_to "Guardianships", guardianship_path %></p>
