fixed changes provided by mr. vondy, and removed some unused files

--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -94,7 +94,7 @@ pre, code, kbd, samp { font-family: monospace, sans-serif; }
 
 body, select, input, textarea { 
   /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */ 
-  color: #444; 
+  color: #777;
   /* set your base font here, to apply evenly */
   /* font-family: Georgia, serif;  */   
 }
@@ -2113,4 +2113,8 @@ margin: 5px 0 10px;
 }
 div.toggler h3{
 margin: 5px 0 8px;
+}
+
+.areas_of_practice {
+  font-size: 1.25em;
 }
