--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
       </ul>
     </div>
     <div class="gs_4 widget">
-      <h4 class="widgettitle">Attorney's At Law</h4>
+      <h4 class="widgettitle">Attorneys At Law</h4>
 
       <ul>
         <li><%= link_to "P. Kay Adrian", adrian_path %></li>
