--- a/app/views/pages/adrian.html.erb
+++ b/app/views/pages/adrian.html.erb
@@ -1,7 +1,7 @@
 <div class="container_omega">
   <p>
     <%= image_tag "staff/kay_adrian.jpg", :class => "alignleft" %>
-    <strong>Kay Adrian</strong> earned her undergraduate degree with honors in the teach of social studies  from the University of Illinois, and was awarded a Juris Doctor degree by Loyola University in Chicago.<br>
+    <strong>Kay Adrian</strong> earned her undergraduate degree with honors in the teaching of social studies  from the University of Illinois, and was awarded a Juris Doctor degree by Loyola University in Chicago.<br>
     <br>
     Her primary areas of practice involve representing claimants in obtaining Social Security Disability benefits, representing debtors in bankruptcy proceedings, and establishing guardianships and conservatorships for the incapacitated and disabled.<br>
     <br>
