--- a/app/views/pages/social_security.html.erb
+++ b/app/views/pages/social_security.html.erb
@@ -6,6 +6,6 @@
   <p>To be successful in obtaining Social Security benefits it is often necessary to obtain additional medical and vocational information and evidence, and to obtain statements and
   opinions from your doctors, nurse practitioners and other medical providers.  Kay Adrian will work to obtain the information and evidence needed to prove your claim to the Social Security Administration.</p>
 
-  <p>Kay Adrian is an active member of the National Organization of Social Security Claimants Representatives.  She has assisted many claimants who live in the City of Winchester and the surrounding counties of Virginia and West Virginia law office’s service area in obtaining Social Security Disability benefits and Supplemental Social
+  <p>Kay Adrian is an active member of the National Organization of Social Security Claimants Representatives.  She has assisted many claimants who live in the City of Winchester and the surrounding counties of Virginia and West Virginia in obtaining Social Security Disability benefits and Supplemental Social
   Security Income benefits.  She is happy to talk to you initially over the phone concerning your case.</p>
 </div>
