--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Adrian &amp; Vondy P.L.C.</title>
+  <title><%= title %></title>
+  <%= description.blank? ? nil : description.html_safe %>
+  <%= keywords.blank? ? nil : keywords.html_safe %>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
   <%#= javascript_include_tag "plugins" %>
