--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,9 @@
 <div id="container">
   <!-- Header -->
   <div id="header">
-    <div id="logo"><%= link_to "Adrian & Vondy, P.L.C.", root_path %></div>
+    <div id="logo"><%= link_to image_tag("logo.png", :style => 'padding-top:10px;'), root_path %></div>
     <div id="personal_data">
       <p>Phone <span>(540) 667-8735</span></p>
-
       <p>Facsimile <span>(540) 667-8128</span></p>
     </div>
   </div>
