making requested changes

--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -488,7 +488,7 @@ a:link { -webkit-tap-highlight-color: #DE5328; }
 *******************************************************************************************************************************************************************/
 
 p{
-font:13px/19px Trebuchet MS,Arial,Helvetica, sans-serif;
+font:14px/20px Trebuchet MS,Arial,Helvetica, sans-serif;
 letter-spacing:0.1px;
 margin:0 0 1.5em;
 color:#666666;
@@ -1428,6 +1428,7 @@ padding:6px 0 4px 0;
 #footer .widget ul li a{
 text-decoration:none;
 display:block;
+font-size: 125%;
 }
 #footer_bottom{
 width:980px;
