making adjustments to bankruptcy page

--- a/app/views/pages/bankruptcy.html.erb
+++ b/app/views/pages/bankruptcy.html.erb
@@ -5,7 +5,8 @@
   <ol>
     <li>
     <h3>What do you charge for an individual/couple filing for bankruptcy?</h3>
-    <p><strong>Initial Consultation is Free.</strong></p>
+    <strong>Initial Consultation is Free.</strong></br>
+    <br>
     Our fee: For straightforward cases,<br>
     <pre>my fee is usually                                                    $850.00.
 
@@ -136,13 +137,13 @@ cause people to file for bankruptcy are:
      </li>
      <li>
      <h3>Will I be able to get credit after I file for bankruptcy?</h3>
-     <p>Oh yes! Sometimes a debtor receives credit card solicitations before he or she is out of bankruptcy. BEWARE. This is not usually the type of credit you want and, remember, it may have been credit cards that got you into bankruptcy in the first place. </p>
-
-     <p>Most mortgage companies and banks are willing to consider you for a mortgage loan after four years.</p>
-
-     <p>Likewise, if you keep a car during your bankruptcy and faithfully make your payments, you will most likely be able to get a car loan.</p>
-
-     <p>Whether you get credit depends a lot on what you do after the bankruptcy filing, the job you have and whether you have been diligent in paying your creditors on time.</p>
+     Oh yes! Sometimes a debtor receives credit card solicitations before he or she is out of bankruptcy. BEWARE. This is not usually the type of credit you want and, remember, it may have been credit cards that got you into bankruptcy in the first place.<br>
+<br>
+     Most mortgage companies and banks are willing to consider you for a mortgage loan after four years.<br>
+<br>
+     Likewise, if you keep a car during your bankruptcy and faithfully make your payments, you will most likely be able to get a car loan.</br>
+<br>
+     Whether you get credit depends a lot on what you do after the bankruptcy filing, the job you have and whether you have been diligent in paying your creditors on time.
      </li>
      <li>
      <h3>Can I pick and choose which creditors I list in bankruptcy?</h3>
