--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -32,7 +32,7 @@ time, mark, audio, video {
   padding:0;
   border:0;
   outline:0;
-  font-size:100%;
+  font-size:105%;
   vertical-align:baseline;
   background:transparent;
 }                  
@@ -84,7 +84,7 @@ select, input, textarea, button { font:99% sans-serif; }
 /* normalize monospace sizing 
  * en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome
  */
-pre, code, kbd, samp { font-family: monospace, sans-serif; }
+/*pre, code, kbd, samp { font-family: monospace, sans-serif; }*/
  
 
 /* 
@@ -632,10 +632,10 @@ pre{
 display:block;
 overflow:hidden;
 padding:10px 22px;
-border:1px dotted #cccccc;
+/*border:1px dotted #cccccc;*/
 margin-bottom:16px;
-background-color:#ececec;
-font:1em/1.4em Consolas,"Courier New",Courier,monospace;
+/*background-color:#ececec;*/
+font-size:105%
 }
 pre:hover{
 overflow:visible;
