--- a/app/views/pages/bankruptcy.html.erb
+++ b/app/views/pages/bankruptcy.html.erb
@@ -8,7 +8,7 @@
     <strong>Initial Consultation is Free.</strong></br>
     <br>
     Our fee: For straightforward cases,<br>
-    <pre>my fee is usually                                                    $850.00.
+    <pre>My fee is usually                                                    $850.00.
 
     There may be an additional charge depending on such things as:  whether you have filed bankruptcy before; whether you own a home that you are keeping; whether you have a garnishment against you;  whether there are judgment liens that need to be voided; whether you will need a reaffirmation agreement; whether you are above the means test.  These are items that will add some cost to the bankruptcy fee generally in increments of $50 to $100.
 
@@ -25,7 +25,7 @@
     </pre>
     </li>
     <li>
-    <h3>Should I file for bankruptcy?</h3> Many people question whether they should file for bankruptcy. By the time most people are thinking about filing for bankruptcy, their finances are out of control and they have little financial choice but to file and obtain a financial "Fresh Start.” 
+    <h3>Should I file for bankruptcy?</h3> Many people question whether they should file for bankruptcy. By the time most people are thinking about filing for bankruptcy, their finances are out of control and they have little financial choice but to declare bankruptcy and obtain a financial "Fresh Start.” 
     <pre>
     What drives people into bankruptcy? Some of the things that 
 cause people to file for bankruptcy are:
@@ -53,7 +53,7 @@ cause people to file for bankruptcy are:
         2) Most civil proceedings (pending court hearings for warrants in debt, judgments)
         3) Garnishments
         4) Setoffs from your bank accounts
-        5) Attempts by creditors to repossess or foreclose on property
+        5) Attempts by creditors to repossess vehicles or foreclose on real estate
 
     b. What are the types of bankruptcy ?
         There are several types of bankruptcies. For individuals/couples the two most frequently used bankruptcy chapters are 
@@ -64,10 +64,10 @@ cause people to file for bankruptcy are:
     <li>
     <h3>What is the difference between a Chapter 7 and Chapter 13 bankruptcy?</h3>
     <pre>
-     a. What is a Chapter 7
+     a. What is a Chapter 7?
       Most individuals/couples file under Chapter 7. In this type of bankruptcy, a debtor can discharge (get rid of) most of their debts.  (Examples:  most credit card debt, medical bills, deficiencies on repossessed vehicles; deficiencies from foreclosed homes; etc.) 
 
-      With respect to secured debts (cars, houses), the debtor has a choice and can either reaffirm the debt and keep the house or car OR the debtor can give back the car or house and discharge the debt in bankruptcy. Most Chapter 7 cases are completed in the court system in 90 to 120 days. 
+      With respect to secured debts (cars, houses), the debtor has a choice and can either reaffirm the debt and keep the home or car OR the debtor can give back the car or house and discharge the debt in bankruptcy. Most Chapter 7 cases are completed in the court system in 90 to 120 days. 
 
      b. What is a Chapter 13?
       A Chapter 13 is useful for individuals who want to keep their house but are in arrears; who because of excess income, can not file a Chapter 7 case; or who have certain types of debts that get preferable treatment in a Chapter 13. In a Chapter 13 case, the debtor proposes a financial plan to the Court concerning how the debtor will restructure his debt and how the debtor will repay some or all of the debt. At a minimum, the debtor must have sufficient income to pay money to a trustee who will then distribute the money to certain claims. Be prepared to live with the Bankruptcy Court for five (5) years if you file a Chapter 13. 
@@ -87,7 +87,7 @@ cause people to file for bankruptcy are:
      </li>
      <li>
      <h3>What can I keep in bankruptcy?</h3> 
-     What you are able to keep depends on the state you live in? But almost everyone can keep:
+     What you are able to keep depends on the state you live in. But almost everyone can keep:
      <pre>
      1) Clothes
      2) Furniture
@@ -98,7 +98,7 @@ cause people to file for bankruptcy are:
      6) Usually a car/vehicle (see further information below).
      7. Burial plots 
      8) Health aids
-     9) Usually a gun in Virginia
+     9) Usually a firearm in Virginia
     10) Pets
     11) And certain amount of any other property of the debtor's own choice (up to $5000 per person in the State of Virginia and up to $25,000 per person in the state of West Virginia) 
     12) In Virginia, additional exemptions are available if you are a disabled veteran (add an additional $10,000.00) or a senior citizen (add an additional $5,000.00)
@@ -139,7 +139,7 @@ cause people to file for bankruptcy are:
      <h3>Will I be able to get credit after I file for bankruptcy?</h3>
      Oh yes! Sometimes a debtor receives credit card solicitations before he or she is out of bankruptcy. BEWARE. This is not usually the type of credit you want and, remember, it may have been credit cards that got you into bankruptcy in the first place.<br>
 <br>
-     Most mortgage companies and banks are willing to consider you for a mortgage loan after four years.<br>
+     Most mortgage companies and banks are willing to consider you for a mortgage loan after four years have passed.<br>
 <br>
      Likewise, if you keep a car during your bankruptcy and faithfully make your payments, you will most likely be able to get a car loan.</br>
 <br>
