Changes requested by the Vondy's

--- a/app/views/pages/bankruptcy.html.erb
+++ b/app/views/pages/bankruptcy.html.erb
@@ -7,19 +7,18 @@
     <h3>What do you charge for an individual/couple filing for bankruptcy?</h3>
     <strong>Initial Consultation is Free.</strong></br>
     <br>
-    Our fee: For straightforward cases,<br>
-    <pre>My fee is usually                                                    $850.00.
-
+    Our fee: For straightforward cases, our fee is usally $850.00.<br>
+    <pre> 
     There may be an additional charge depending on such things as:  whether you have filed bankruptcy before; whether you own a home that you are keeping; whether you have a garnishment against you;  whether there are judgment liens that need to be voided; whether you will need a reaffirmation agreement; whether you are above the means test.  These are items that will add some cost to the bankruptcy fee generally in increments of $50 to $100.
 
-    Costs: Bankruptcy Court Filing Fee:      $306.00
+    Costs: Bankruptcy Court Filing Fee:      $335.00
     In Virginia, a filing fee 
     for your exemption list 
     (called a Homestead Deed)         $ 21.00 (individual)
     42.00 (couple)
 
-    TOTAL STARTING FEE :  $ 1,177.00 (individual)
-    $1,198 00 (couple)
+    TOTAL STARTING FEE :  $ 1,206.00 (individual)
+    $1,227.00 (couple)
 
     Not charged by my office but required by the bankruptcy court, a debtor is required to consult with a consumer credit counseling agency and obtain a pre-bankruptcy certificate stating that you have undergone consumer credit counseling and a post-bankruptcy certificate stating that you have taken a financial management coarse. These classes are usually done on-line and cost between $15.00 and $50.00) 
     </pre>
@@ -58,7 +57,7 @@ cause people to file for bankruptcy are:
     b. What are the types of bankruptcy ?
         There are several types of bankruptcies. For individuals/couples the two most frequently used bankruptcy chapters are 
         1) Chapter 7 – Liquidation 
-        2). Chapter 13 – Wage Earners Plan
+        2) Chapter 13 – Wage Earners Plan
     </pre>
     </li>
     <li>
@@ -72,9 +71,7 @@ cause people to file for bankruptcy are:
      b. What is a Chapter 13?
       A Chapter 13 is useful for individuals who want to keep their house but are in arrears; who because of excess income, can not file a Chapter 7 case; or who have certain types of debts that get preferable treatment in a Chapter 13. In a Chapter 13 case, the debtor proposes a financial plan to the Court concerning how the debtor will restructure his debt and how the debtor will repay some or all of the debt. At a minimum, the debtor must have sufficient income to pay money to a trustee who will then distribute the money to certain claims. Be prepared to live with the Bankruptcy Court for five (5) years if you file a Chapter 13. 
     </pre>
-    To determine what is best for you , talk to your bankruptcy lawyer.
-
-    THE FOLLOWING INFORMATION APPLIES TO CHAPTER 7 BANKRUPTCY PROCEEDINGS.
+    To determine what is best for you , talk to your bankruptcy lawyer. PLEASE NOTE THAT WE DO NOT HANDLE CHAPTER 13 BANKRUPTCY FILINGS AT THIS TIME. THE FOLLOWING INFORMATION APPLIES TO CHAPTER 7 BANKRUPTCY PROCEEDINGS.
     </li>
     <li>
     <h3>Am I eligible to file for Chapter 7 bankruptcy?</h3>
@@ -83,7 +80,7 @@ cause people to file for bankruptcy are:
     <pre>
     1) Have you filed for bankruptcy before? You are not eligible to file a bankruptcy case if you filed for bankruptcy and received a discharge within the 8 years immediately preceding your current filing. There must be 8 years between the filing of the bankruptcy petitions.
 
-     2) What is your income?. Most low and moderate income individuals/ couples, pass the income test (In Virginia, beginning November 1, 2012, a family of 4 could have a gross yearly income of  $89,803. In West Virginia, beginning November 1, 2012, a family of 4 could have a gross yearly income of $65,403.)   Upper income individuals and couples may still qualify for a Chapter 7 bankruptcy; however, it is necessary to complete a detailed test that takes into consideration numerous factors, including house payments, car payments, payment of alimony, child care expenses, etc. Expect your bankruptcy lawyer to spend some time and effort to make sure that you qualify. Most bankruptcy lawyers charge a small fee for this service. </pre>
+     2) What is your income? Most low and moderate income individuals/ couples, pass the income test (In Virginia, beginning November 1, 2014, a family of 4 could have a gross yearly income of  $91,859. In West Virginia, beginning November 1, 2014, a family of 4 could have a gross yearly income of $66,009.)   Upper income individuals and couples may still qualify for a Chapter 7 bankruptcy; however, it is necessary to complete a detailed test that takes into consideration numerous factors, including house payments, car payments, payment of alimony, child care expenses, etc. Expect your bankruptcy lawyer to spend some time and effort to make sure that you qualify. Most bankruptcy lawyers charge a small fee for this service. </pre>
      </li>
      <li>
      <h3>What can I keep in bankruptcy?</h3> 
