--- a/app/views/pages/social_security.html.erb
+++ b/app/views/pages/social_security.html.erb
@@ -1,5 +1,5 @@
 <div class="container_omega">
-  <h2 class="widgettitle">Social Security Disability</h2>
+  <h2 class="widgettitle">Social Disability</h2>
 
   <p>Our Office may be able to assist you in obtaining Social Security Disability benefits. There is no consultation fee for an initial appointment and there is no attorney’s fee unless we are successful.</p>
 
