--- a/app/views/pages/bankruptcy.html.erb
+++ b/app/views/pages/bankruptcy.html.erb
@@ -20,7 +20,7 @@
     TOTAL STARTING FEE :  $ 1,206.00 (individual)
     $1,227.00 (couple)
 
-    Not charged by my office but required by the bankruptcy court, a debtor is required to consult with a consumer credit counseling agency and obtain a pre-bankruptcy certificate stating that you have undergone consumer credit counseling and a post-bankruptcy certificate stating that you have taken a financial management coarse. These classes are usually done on-line and cost between $15.00 and $50.00) 
+    Not charged by my office but required by the bankruptcy court, a debtor is required to consult with a consumer credit counseling agency and obtain a pre-bankruptcy certificate stating that you have undergone consumer credit counseling and a post-bankruptcy certificate stating that you have taken a financial management course. These classes are usually done on-line and cost between $15.00 and $50.00) 
     </pre>
     </li>
     <li>
