--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -27,11 +27,10 @@
         </div>
         <div class="gs_3 omega">
           <h3 class="widgettitle">Our Primary Areas of Practice</h3>
-          <p class="areas_of_practice"><%= link_to "Bankruptcy, free initial consultation", bankruptcy_path %></p>
+          <p class="areas_of_practice"><%= link_to "Bankruptcy, Free Initial Consultation", bankruptcy_path %></p>
           <p class="areas_of_practice"><%= link_to "Estate Planning, Wills and Trusts", estate_planning_path %></p>
           <p class="areas_of_practice"><%= link_to "Estate Administration and Probate", estate_planning_path %></p>
           <p class="areas_of_practice"><%= link_to "Real Estate Settlements", real_estate_path %></p>
-          <p class="areas_of_practice"><%= link_to "Social Security Disability", social_security_path %></p>
           <p class="areas_of_practice"><%= link_to "Guardianships", guardianship_path %></p>
         </div>
     </div>
