--- a/templates/base.html
+++ b/templates/base.html
@@ -60,8 +60,7 @@
           </div>
         </div>
         <div id="footer_bottom" class="png_bg">
-          <p>Copyrights &copy; <a href="/">Adrian & Vondy, P.L.C.</a> {today.getFullYear()}. All rights
-            reserved.</p></div>
+          <p>Copyrights &copy; <a href="/">Adrian & Vondy, P.L.C.</a> {{ now() | date(format="%Y") }}. All rights reserved.</p></div>
       </div>
     </div>
   </body>
