--- a/templates/index.html
+++ b/templates/index.html
@@ -30,13 +30,7 @@
   <div class="gs_3 omega">
     <h3 class="widgettitle">Our Primary Areas of Practice</h3>
     <p class="areas_of_practice">
-      <a href="/estate-planning/">Estate Administration and Probate</a>
-    </p>
-    <p class="areas_of_practice">
-      <a href="/real-estate/">Real Estate Settlements</a>
-    </p>
-    <p class="areas_of_practice">
-      <a href="/guardianship/">Guardianships</a>
+      <a href="/frederick/">Commissioner of Accounts<br />Frederick County, Virginia</a>
     </p>
     <p class="areas_of_practice">
       <a href="/estate-planning/">Estate Planning, Wills and Trusts</a>
