Remove licensed in other states

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,9 +53,7 @@
 
             <ul>
               <li><a href="/adrian/">P. Kay Adrian</a></li>
-              <li><a href="/frederick/">Frederick S. Vondy</a>
-                (also licensed in West Virginia and Maryland)
-              </li>
+              <li><a href="/frederick/">Frederick S. Vondy</a></li>
             </ul>
           </div>
         </div>
